@@ -1,3 +1,8 @@
+2012-10-10  Borut Razem  <borutr@users.sourceforge.net>
+  * evaluate.c: fixed list_length() for cases where tail of the list is
+    not a list; MPASM(X) compatible shift operations in mpasm
+    compatibility mode
+
 2012-09-17  Molnar Karoly  <borutr@users.sourceforge.net>
   * lkr/16f73_g.lkr: The repair of repair.
 
